public enum PlayerType
{
    Civilisation,
    World
}
